# rust-cart-app

./: Cargo.toml  README.md
src/: getprice.rs  main.rs  redis.rs
src/apis/: add_to_existing_grocery.rs  delete_grocery_item.rs  get_grocery_item.rs  get_grocery_list.rs  get_nutrition.rs  update_grocery.rs
src/chatgpt/: getrecipe.rs
