[package]
name = "warp-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
tokio = {version = "1.32.0", features = ["full"]}
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.28"
warp = "0.3.6"
parking_lot = "0.10.0"
serde_json = "1.0.111"
openai-rust = "1.5.2"
[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]

[dependencies.redis]

[dependencies.redis-async-pool]
version = "0.2.4"
